Start work on Hugo Translator
* Drop scala 2.12 support
* Comment out sbt-riddl to move to another project
* Refactor things a little based on scala 2.13