@@ -7,8 +7,9 @@ import sbtbuildinfo.BuildInfoOption.ToMap
 dynverSeparator in ThisBuild := "-"
 scalafmtOnCompile in ThisBuild := true
 organization in ThisBuild := "com.yoppworks"
-buildInfoOptions in ThisBuild := Seq(ToMap, BuildTime)
-buildInfoKeys in ThisBuild := Seq[BuildInfoKey](
+scalaVersion in ThisBuild := "2.13.3"
+buildInfoOptions := Seq(ToMap, BuildTime)
+buildInfoKeys := Seq[BuildInfoKey](
   name,
   normalizedName,
   description,
@@ -22,34 +23,37 @@ buildInfoKeys in ThisBuild := Seq[BuildInfoKey](
   sbtVersion
 )
 
-def standardScalaCOptions(is2_13: => Boolean): Seq[String] = {
-  Seq(
-    "-encoding",
-    "utf8",
-    "-Xfatal-warnings",
-    "-deprecation",
-    "-unchecked",
-    "-language:implicitConversions",
-    "-language:higherKinds",
-    "-language:existentials",
-    "-language:postfixOps",
-    "-J--illegal-access=none",
-    { if (is2_13) "-Wdead-code" else "" }
-  )
-}
+scalacOptions := Seq(
+  s"-target:11",
+  "-Wdead-code",
+  // "-Woctal-literal", <-- that warning is broken, it warns on:  val x: Int = 0
+  // "-Xdev",
+  // "-Wunused:imports",   // Warn if an import selector is not referenced.
+  "-Wunused:patvars", // Warn if a variable bound in a pattern is unused.
+  "-Wunused:privates", // Warn if a private member is unused.
+  "-Wunused:locals", // Warn if a local definition is unused.
+  "-Wunused:explicits", // Warn if an explicit parameter is unused.
+  "-Wunused:implicits", // Warn if an implicit parameter is unused.
+  "-Wunused:params", // Enable -Wunused:explicits,implicits.
+  "-Xlint:nonlocal-return", // A return statement used an exception for flow control.
+  "-Xlint:implicit-not-found", // Check @implicitNotFound and @implicitAmbiguous messages.
+  "-Xlint:serial", // @SerialVersionUID on traits and non-serializable classes.
+  "-Xlint:valpattern", // Enable pattern checks in val definitions.
+  "-Xlint:eta-zero", // Warn on eta-expansion (rather than auto-application) of zero-ary method.
+  "-Xlint:eta-sam", // Warn on eta-expansion to meet a Java-defined functional
+  // interface that is not explicitly annotated with @FunctionalInterface.
+  "-Xlint:deprecation" // Enable linted deprecations.
+)
 
 lazy val compilecheck = taskKey[Unit]("compile and then scalastyle")
 
 lazy val riddl = (project in file("."))
   .settings(publish := {}, publishLocal := {})
-  .aggregate(language, translator, riddlc, `sbt-riddl`)
+  .aggregate(language, translator, riddlc /*, `sbt-riddl`*/ )
 
-lazy val riddlc = (project in file("riddlc"))
-  .enablePlugins(ParadoxPlugin)
-  .enablePlugins(ParadoxSitePlugin)
-  .enablePlugins(ParadoxMaterialThemePlugin)
-  .enablePlugins(BuildInfoPlugin)
-  .settings(
+lazy val riddlc = (project in file("riddlc")).enablePlugins(ParadoxPlugin)
+  .enablePlugins(ParadoxSitePlugin).enablePlugins(ParadoxMaterialThemePlugin)
+  .enablePlugins(BuildInfoPlugin).settings(
     name := "riddlc",
     mainClass := Some("com.yoppworks.ossum.riddl.RIDDL"),
     paradoxNavigationDepth := 6,
@@ -72,11 +76,9 @@ lazy val riddlc = (project in file("riddlc"))
   val paradoxValidationSiteBasePath = settingKey[Option[String]]("The base path that the documentation is deployed to, allows validating links on the docs site that are outside of the documentation root tree")
      */
     Compile / paradoxMaterialTheme := {
-      ParadoxMaterialTheme()
-        .withColor("blue", "grey")
+      ParadoxMaterialTheme().withColor("blue", "grey")
         .withLogoIcon("yw-elephant")
-        .withCopyright("Copyright © 2019 Yoppworks Inc.")
-        .withSocial(
+        .withCopyright("Copyright © 2019 Yoppworks Inc.").withSocial(
           uri("https://github.com/yoppworks"),
           uri("https://twitter.com/yoppworks"),
           uri("https://www.linkedin.com/company/yoppworks"),
@@ -89,17 +91,11 @@ lazy val riddlc = (project in file("riddlc"))
       "com.github.scopt" %% "scopt" % "4.0.0-RC2",
       "com.typesafe" % "config" % "1.4.0"
     ),
-    crossScalaVersions := Seq("2.13.1", "2.12.10"),
-    scalacOptions ++= standardScalaCOptions(scalaVersion.value == "2.13.1"),
     buildInfoPackage := "com.yoppworks.ossum.riddl"
-  )
-  .dependsOn(translator)
-  .aggregate(language, translator)
+  ).dependsOn(translator).aggregate(language, translator)
 
 lazy val language = (project in file("language")).settings(
   name := "riddl-languge",
-  crossScalaVersions := Seq("2.13.1", "2.12.10"),
-  scalacOptions ++= standardScalaCOptions(scalaVersion.value == "2.13.1"),
   buildInfoPackage := "com.yoppworks.ossum.riddl.language",
   libraryDependencies ++= Seq(
     "org.typelevel" %% "cats-core" % "2.1.0",
@@ -110,39 +106,29 @@ lazy val language = (project in file("language")).settings(
     "org.scalacheck" %% "scalacheck" % "1.14.3" % "test"
   ),
   compilecheck in Compile := {
-    Def
-      .sequential(
-        compile in Compile,
-        (scalastyle in Compile).toTask("")
-      )
-      .value
+    Def.sequential(compile in Compile, (scalastyle in Compile).toTask("")).value
   }
 )
 
-lazy val translator = (project in file("translator"))
-  .settings(
-    name := "riddl-translator",
-    crossScalaVersions := Seq("2.13.1", "2.12.10"),
-    scalacOptions ++= standardScalaCOptions(scalaVersion.value == "2.13.1"),
-    buildInfoPackage := "com.yoppworks.ossum.riddl.translator",
-    libraryDependencies ++= Seq(
-      "org.jfree" % "jfreesvg" % "3.4",
-      "org.scalactic" %% "scalactic" % "3.1.0",
-      "org.scalatest" %% "scalatest" % "3.1.0" % "test",
-      "org.scalacheck" %% "scalacheck" % "1.14.3" % "test",
-      "com.github.pureconfig" %% "pureconfig" % "0.12.2"
-    )
+lazy val translator = (project in file("translator")).settings(
+  name := "riddl-translator",
+  buildInfoPackage := "com.yoppworks.ossum.riddl.translator",
+  libraryDependencies ++= Seq(
+    "org.jfree" % "jfreesvg" % "3.4",
+    "org.scalactic" %% "scalactic" % "3.1.0",
+    "org.scalatest" %% "scalatest" % "3.1.0" % "test",
+    "org.scalacheck" %% "scalacheck" % "1.14.3" % "test",
+    "com.github.pureconfig" %% "pureconfig" % "0.12.2"
   )
-  .dependsOn(language % "test->test;compile->compile")
+).dependsOn(language % "test->test;compile->compile")
 
-lazy val `sbt-riddl` = (project in file("sbt-riddl"))
-  .settings(
-    name := "sbt-riddl",
-    sbtPlugin := true,
-    scalaVersion := "2.12.10",
-    scalacOptions ++= standardScalaCOptions(false),
-    buildInfoPackage := "com.yoppworks.ossum.riddl.sbt.plugin"
-  )
-  .enablePlugins(SbtPlugin)
+/*
+lazy val `sbt-riddl` = (project in file("sbt-riddl")).settings(
+  name := "sbt-riddl",
+  sbtPlugin := true,
+  scalaVersion := "2.12.10",
+  buildInfoPackage := "com.yoppworks.ossum.riddl.sbt.plugin"
+).enablePlugins(SbtPlugin)
 //  .enablePlugins(ParadoxPlugin)
   .dependsOn(translator)
+ */
